WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305061
[Temporal] Order of operations in Temporal.PlainTime.from is wrong
https://bugs.webkit.org/show_bug.cgi?id=305061
Summary
[Temporal] Order of operations in Temporal.PlainTime.from is wrong
Tim Chevalier
Reported
2026-01-07 11:53:44 PST
Currently, the implementation of this function reads the overflow option before the property bag fields. This is wrong, according to the spec. The test262 test `test/built-ins/Temporal/PlainTime/from/order-of-operations.js` fails because of this bug.
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Chevalier
Comment 1
2026-01-07 11:56:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56210
EWS
Comment 2
2026-01-10 01:22:18 PST
Committed
305405@main
(66872dfe52e5): <
https://commits.webkit.org/305405@main
> Reviewed commits have been landed. Closing PR #56210 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-10 01:23:11 PST
<
rdar://problem/167897646
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug